--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
         <title>Webpack App</title>
     </head>
     <body>
+      <div class="container mt-5">
         <h1>Hello SvetKA!</h1>
-        <h2>Tip: Check your console</h2>
-    </body>
-    
+          <form id="main" method="post">
+            <input type="text" name="path" id="path" required>
+            <button class="btn btn-primary">Button</button>
+          </form>
+      </div>
+    </body>  
 </html>
