--- a/index.html
+++ b/index.html
@@ -4,22 +4,28 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Webpack App</title>
-        <link href="./src/style.css" rel="stylesheet">
     </head>
-    <body>
-      <div class="container mt-5">
-        <h1>Hello SvetKA!</h1>
-          <form id="rss-form" method="post">
-            <div class="row">
-              <div class="col">
-              <input id="url-input" name="url" aria-label="url" class="form-control w-100" autofocus required placeholder="ссылка RSS">
-              <label for="url-input">Ссылка RSS</label>
-            </div>
-            <div class="col">
-              <button type="submit" class="btn btn-primary">Добавить</button>
-            </div>
-            </div>
-          </form>
-      </div>
+    <body class="d-flex flex-column min-vh-100">
+      <main class="flex-grow-1">
+        <section class="container-fluid bg-dark p-5">
+          <div class="col-md-10 col-lg-8 mx-auto text-white">
+            <h1 class="display-3 mb-0">RSS агрегатор</h1>
+              <form action class="rss-form text-body" id="rss-form">
+                <div class="row">
+                  <div class="col">
+                    <div class="form-floating">
+                      <input id="url-input" name="url" aria-label="url" class="form-control w-100" autofocus required placeholder="ссылка RSS">
+                      <label for="url-input">Ссылка RSS</label>
+                    </div>
+                  </div>
+                  <div class="col-auto">
+                    <button type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5">Добавить</button>
+                  </div>
+                </div>
+              </form>
+              <p class="feedback m-0 position-absolute small text-danger"></p>
+          </div>
+      </section>
+      </main>
     </body>  
 </html>
