--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
               <p class="feedback m-0 position-absolute small text-danger"></p>
           </div>
       </section>
+      <section class="container-fluid container-xxl p-5">
+        <div class="col-md-10 col-lg-8 order-1 mx-auto posts"></div>
+        <div class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds"></div>
+      </section>
       </main>
     </body>  
 </html>
